  e - allow input of walltime in the format of [DD]:HH:MM:SS (backported from
      2.5.2)
  b - only clear the mom state when actually running the health check script
      (backported from 2.5.3)
  b - don't try to set the user id multiple times - (backported from 2.5.3)
  c - fix segfault in tracejob. It wasn't malloc'ing space for the null 
      terminator (back-ported from 2.5.3)

2.4.10
  b - fix to get new pagg ID and add additional CSA records when restarting from
      checkpoint (backported from 2.5.2)
  e - added documentation for pbs_alterjob_async(), pbs_checkpointjob(),
      pbs_fbserver(), pbs_get_server_list() and pbs_sigjobasync(). (backported 
      from 2.5.2)
  b - fix for bug 61. The fix takes care of a problem where pbs_mom under
      some situations will change the mode and permissions of /dev/null.

2.4.9
  b - Backed out enhancement for preempted jobs. This was SVN revision 3784.
      This patch cased qrun to hang and not return when executing jobs.
  e - Commited changes that changed how preempted jobs are killed.
      This change uses a SIGTERM followed by a kill_delay SIGKILL 
      to give preemted jobs time to checkpoint before terminating.

  e - Patch to correctly log attempts to create a cpuset as debug messages.
      The function im_request() in src/resmom/mom_comm.c logs the message:
      pbs_mom: LOG_ERROR::im_request, about to create cpuset for job 55100.blah.
       as an error rather than a debug message (as used in src/resmom/start_exec.c).
       The fix is to replace:
       log_err(-1, id, log_buffer);
      with:
       log_ext(-1, id, log_buffer, LOG_INFO);

  b - Modified fix in qmgr.c in is_attr to check for the '.' character
      on resource attributes such as resources_available.nodect. The 
      attribute is striped of the '.' and the element and just the attribute
      name is used to compare for a valid attribute.
  b - Made a fix to qmgr.c in is_attr. When checking node names against